alertmanager.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: madrid-p5

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: alertmanager
  namespace: madrid-p5
  labels:
    name: p5
    rol: deployment
    barrio: madrid
    imagen: alertmanager
spec:
  progressDeadlineSeconds: 30
  revisionHistoryLimit: 5
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 2
      maxUnavailable: 0
  replicas: 1
  selector:
    matchLabels:
      barrio: madrid
      rol: pod
      imagen: alertmanager
  template:
    metadata:
      labels:
        name: p5
        rol: pod
        barrio: madrid
        imagen: alertmanager
      annotations:
        kubernetes.io/description: "Instancia del AlertManager de Prometheus para la fase opcional de la P5"
        imagen: "prom/alertmanager:latest"
        kubernetes.io/change-cause: "Primera versión del Deployment del AlertManager"
    spec:
      volumes: 
        - name: vol-madrid
          hostPath:
            type: Directory
            path: /config-alertmanager
      containers:
      - name: pod-alertmanager
        image: prom/alertmanager
        args: ["--config.file=/etc/prometheus/conf-alertmanager.yaml"]
        volumeMounts:
          - mountPath: /etc/prometheus
            name: vol-madrid
        resources:
          limits:
            memory: "32Mi"
            cpu: "50m"

---

apiVersion: v1
kind: Service
metadata:
  name: np-alertmanager
  namespace: madrid-p5
spec:
  type: NodePort
  selector:
    barrio: madrid
    rol: pod
    imagen: alertmanager
  ports:
  - port: 12345
    targetPort: 9093
    nodePort: 32353
