delicias-f1.yaml
# Universidad Politécnica de Madrid - Escuela Técnica Superior de Ingeniería y Sistemas de Telecomunicación
# Grado en Ingeniería y Sistemas de Datos - Computación en la Nube - P5
# Archivo de manifiesto para la fase 1 del  barrio Delicias

# Definición del espacio de nombres que simulará el clúster de Delicias
kind: Namespace
apiVersion: v1
metadata:
  name: delicias-p5

---

# Definición del despliegue para gestionar los Pods de PushGateway
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy-pushgateway-delicias
  namespace: delicias-p5
  labels:
    name: p5
    rol: deployment
    barrio: delicias
    imagen: pushgateway
spec:
  progressDeadlineSeconds: 30
  revisionHistoryLimit: 5
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 50%
      maxUnavailable: 25%
  replicas: 3
  selector:
    matchLabels:
      barrio: delicias
      rol: pod
      imagen: pushgateway
  template:
    metadata:
      labels:
        name: p5
        rol: pod
        barrio: delicias
        imagen: pushgateway
      annotations:
        kubernetes.io/description: "Instancia de PushGateway para la fase 1 de la P5"
        imagen: "transactcharlie/pushgateway:latest"
        kubernetes.io/change-cause: "Primera versión del Deployment con 3 réplicas"
    spec:
      containers:
      - name: pod-pushgateway-delicias
        image: "transactcharlie/pushgateway:latest"
        resources:
          limits:
            memory: "64Mi"
            cpu: "100m"
        ports:
        - containerPort: 9000

---

# Definición del servicio NodePort para conectar los pushgateway, sensores y el cliente web
apiVersion: v1
kind: Service
metadata:
  name: np-pushgateway-delicias
  namespace: delicias-p5
spec:
  type: NodePort
  selector:
    barrio: delicias
    rol: pod
    imagen: pushgateway
  ports:
  - port: 12345
    targetPort: 9091
    nodePort: 30353
