ingress-f3.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-delicias
  namespace: delicias-p5
  labels:
    name: p5
    rol: ingress
    barrio: delicias
  annotations:
    nginx.ingress.kubernetes.io/use-regex: 'true'
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - host: www.madrid.es
    http:
      paths:
      - pathType: ImplementationSpecific
        path: /delicias(/|$)(.*)
        backend:
          service:
            name: np-prometheus-delicias
            port: 
              number: 12345

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-ibiza
  namespace: ibiza-p5
  labels:
    name: p5
    rol: ingress
    barrio: ibiza
  annotations:
    nginx.ingress.kubernetes.io/use-regex: 'true'
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - host: www.madrid.es
    http:
      paths:
      - pathType: ImplementationSpecific
        path: /ibiza(/|$)(.*)
        backend:
          service:
            name: np-prometheus-ibiza
            port:
              number: 12345
